Auto-population of ships, institutions, surveys in SearchDialog. Layout/formatting of SearchDialog. IdentifyPane: in cruise mode, display instrument name next to cruise name. IdentifyPane: modify layout of tree, and expand all when in cruise mode. Allow for different layerDefinitions for the cruise and file layers. If "Hit Bottom?" is Y/N, print Yes/No Improved display of current filter criteria in the LayersPanel. If in cruise mode, send the cruise/instrument pairs to generateOrder.groovy. Fix Arctic visible layers.

--- a/water_column_sonar/css/local.css
+++ b/water_column_sonar/css/local.css
@@ -290,3 +290,7 @@ html,body {
     white-space: normal;
     width: 300px;
 }
+
+.frequencyText {
+    width: 50px !important;
+}
